manual scaling so no start up times

--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,9 @@ libraries:
 builtins:
 - remote_api: on
 
+manual_scaling:
+- instances: 1
+
 handlers:
 - url: /_ah/(mapreduce|queue|warmup).*
   script: telegramusic.wsgi.application
